--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@heroicons/react": "^2.1.3",
     "@mui/material": "^5.15.17",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@types/pdf-viewer-reactjs": "^2.2.5",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.0.4",
+    "firebase": "^10.11.1",
     "framer-motion": "^11.1.9",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
